# fun_learning_rust_whisper

./: Cargo.toml  README.md
src/: audio_utils.rs  main.rs  whisper.rs
