[package]
name = "fun_learning_rust_whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1.0.79"
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
intel-mkl-src = { version = "0.8.1", optional = true }
safetensors = "0.4.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokenizers = { version = "0.15.0", default-features = false, features = [
  "onig",
] }
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
byteorder = "1.4.3"
rand = "0.8.5"
cpal = "0.15.2"


[features]
default = []
accelerate = [
  "candle/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
metal = ["candle/metal", "candle-nn/metal"]
